[workspace]
members = [
	"examples",
	"benches",
	"http-server",
	"test-utils",
	"jsonrpsee",
	"tests",
	"types",
	"core",
	"ws-server",
	"client/ws-client",
	"client/http-client",
	"client/transport",
	"client/wasm-client",
	"proc-macros",
	"wasm-tests",
]
resolver = "2"


[patch.crates-io]
tokio = {git="https://github.com/Polkadex-Substrate/tokio.git", branch="raoul/tokio-1.14.0-sgx"}
tokio-util = {git="https://github.com/Polkadex-Substrate/tokio.git", branch="raoul/tokio-1.14.0-sgx"}
