[package]
name = "jsonrpsee-examples"
version = "0.15.1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Examples for jsonrpsee"
edition = "2021"
publish = false

[dev-dependencies]
anyhow = "1"
futures = "0.3"
jsonrpsee = { path = "../jsonrpsee", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio = { git="https://github.com/Polkadex-Substrate/tokio.git", branch="raoul/tokio-1.14.0-sgx", version = "1.14.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde_json = { version = "1" }
tower-http = { version = "0.3.4", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
hyper = {git="https://github.com/Polkadex-Substrate/hyper.git", branch="sgx-fortanix-tokio-v1.14.0"}
