[package]
name = "jsonrpsee-test-utils"
version = "0.15.1"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures-channel = "0.3.14"
futures-util = "0.3.14"
hyper = { git="https://github.com/Polkadex-Substrate/hyper.git", branch="sgx-fortanix-tokio-v1.14.0" }
tracing = "0.1.34"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
soketto = { version = "0.7.1", features = ["http"] }
tokio = { git="https://github.com/Polkadex-Substrate/tokio.git", branch="raoul/tokio-1.14.0-sgx", version = "1.14.0", features = ["net", "rt-multi-thread", "macros", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
