[package]
name = "jsonrpsee-integration-tests"
version = "0.15.1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Integration tests for jsonrpsee"
edition = "2021"
license = "MIT"
publish = false

[dev-dependencies]
beef = { version = "0.5.1", features = ["impl_serde"] }
futures = { version = "0.3.14", default-features = false, features = ["std"] }
jsonrpsee = { path = "../jsonrpsee", features = ["full"] }
tokio = { git="https://github.com/Polkadex-Substrate/tokio.git", branch="raoul/tokio-1.14.0-sgx", version = "1.14.0", features = ["full"] }
tracing = "0.1.34"
serde = "1"
serde_json = "1"
hyper = { git="https://github.com/Polkadex-Substrate/hyper.git", branch="sgx-fortanix-tokio-v1.14.0" }
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio-stream = "0.1"
tower-http = { version = "0.3.4", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
