[package]
name = "jsonrpsee-http-client"
version = "0.15.1"
authors = ["Parity Technologies <admin@parity.io>", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "HTTP client for JSON-RPC"
edition = "2021"
license = "MIT"
repository = "https://github.com/paritytech/jsonrpsee"
homepage = "https://github.com/paritytech/jsonrpsee"
documentation = "https://docs.rs/jsonrpsee-http-client"

[dependencies]
async-trait = "0.1"
rustc-hash = "1"
hyper = { git="https://github.com/Polkadex-Substrate/hyper.git", branch="sgx-fortanix-tokio-v1.14.0" }
hyper-rustls = { version = "0.23", optional = true }
jsonrpsee-types = { path = "../../types", version = "0.15.1" }
jsonrpsee-core = { path = "../../core", version = "0.15.1", features = ["client", "http-helpers"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { git="https://github.com/Polkadex-Substrate/tokio.git", branch="raoul/tokio-1.14.0-sgx", version = "1.14.0", features = ["time"] }
tracing = "0.1.34"
tracing-futures = "0.2.5"

[dev-dependencies]
jsonrpsee-test-utils = { path = "../../test-utils" }
tokio = { git="https://github.com/Polkadex-Substrate/tokio.git", branch="raoul/tokio-1.14.0-sgx", version = "1.14.0", features = ["net", "rt-multi-thread", "macros"] }

[features]
default = ["tls"]
tls = ["hyper-rustls/webpki-tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true
